--- a/examples/navbar-1.html
+++ b/examples/navbar-1.html
@@ -82,7 +82,7 @@
             ],
             button =&gt; [&#39;A link&#39;, [&#39;#&#39;], left ],
             nav =&gt; [ items =&gt; [
-                    [&#39;Another linkage&#39;, [&#39;#&#39;] ]
+                    [&#39;Another linkage&#39;, [&#39;#&#39;], -li =&gt; [ data =&gt; { stuff =&gt; &#39;inli&#39; } ], data =&gt; { item =&gt; 1 } ]
                 ]
             ],
             p =&gt; [&#39;Hello&#39;, right]
@@ -106,13 +106,57 @@
             &lt;/form&gt;
             &lt;a class=&quot;btn btn-default navbar-btn navbar-left&quot; href=&quot;#&quot;&gt;A link&lt;/a&gt;
             &lt;ul class=&quot;nav navbar-nav&quot;&gt;
-                &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Another linkage&lt;/a&gt;&lt;/li&gt;
+                &lt;li data-stuff=&quot;inli&quot;&gt;&lt;a href=&quot;#&quot; data-item=&quot;1&quot;&gt;Another linkage&lt;/a&gt;&lt;/li&gt;
             &lt;/ul&gt;
             &lt;p class=&quot;navbar-right navbar-text&quot;&gt;Hello&lt;/p&gt;
         &lt;/div&gt;
     &lt;/div&gt;
 &lt;/nav&gt;</pre>
-<div>    <nav class="navbar navbar-inverse">        <div class="container-fluid">            <div class="navbar-header">                <button class="collapsed navbar-toggle" data-target="#collapse-45821" data-toggle="collapse" type="button">                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                </button>                <a class="navbar-brand" href="#">The Brand</a>            </div>            <div class="collapse navbar-collapse" id="collapse-45821">                <form action="/login" class="navbar-form navbar-left" method="post">                    <div class="form-group">                        <input class="form-control" id="search-term" name="search_term" placeholder="Search" type="text" />                    </div>                    <button class="btn btn-default" type="submit">Submit</button>                </form>                <a class="btn btn-default navbar-btn navbar-left" href="#">A link</a>                <ul class="nav navbar-nav">                    <li><a href="#">Another linkage</a></li>                </ul>                <p class="navbar-right navbar-text">Hello</p>            </div>        </div>    </nav></div>
+<div>    <nav class="navbar navbar-inverse">        <div class="container-fluid">            <div class="navbar-header">                <button class="collapsed navbar-toggle" data-target="#collapse-45821" data-toggle="collapse" type="button">                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                </button>                <a class="navbar-brand" href="#">The Brand</a>            </div>            <div class="collapse navbar-collapse" id="collapse-45821">                <form action="/login" class="navbar-form navbar-left" method="post">                    <div class="form-group">                        <input class="form-control" id="search-term" name="search_term" placeholder="Search" type="text" />                    </div>                    <button class="btn btn-default" type="submit">Submit</button>                </form>                <a class="btn btn-default navbar-btn navbar-left" href="#">A link</a>                <ul class="nav navbar-nav">                    <li data-stuff="inli"><a href="#" data-item="1">Another linkage</a></li>                </ul>                <p class="navbar-right navbar-text">Hello</p>            </div>        </div>    </nav></div>
+<hr />
+<pre>&lt;%= navbar inverse, container =&gt; &#39;normal&#39;, header =&gt; [&#39;The Brand&#39;, [&#39;#&#39;], hamburger, toggler =&gt; &#39;collapse-45821&#39;],
+           form =&gt; [
+                [[&#39;/login&#39;], method =&gt; &#39;post&#39;, left],
+                [
+                    formgroup =&gt; [
+                        text_field =&gt; [&#39;search-term&#39;, placeholder =&gt; &#39;Search&#39; ],
+                    ],
+                    submit_button =&gt; [&#39;Submit&#39;],
+                ]
+            ],
+            button =&gt; [&#39;A link&#39;, [&#39;#&#39;], left ],
+            nav =&gt; [ items =&gt; [
+                    [&#39;Another linkage&#39;, [&#39;#&#39;], -li =&gt; [ data =&gt; { stuff =&gt; &#39;inli&#39; } ], data =&gt; { item =&gt; 1 } ]
+                ]
+            ],
+            p =&gt; [&#39;Hello&#39;, right]
+%&gt;</pre>
+<pre>&lt;nav class=&quot;navbar navbar-inverse&quot;&gt;
+    &lt;div class=&quot;container&quot;&gt;
+        &lt;div class=&quot;navbar-header&quot;&gt;
+            &lt;button class=&quot;collapsed navbar-toggle&quot; data-target=&quot;#collapse-45821&quot; data-toggle=&quot;collapse&quot; type=&quot;button&quot;&gt;
+                &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
+                &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
+                &lt;span class=&quot;icon-bar&quot;&gt;&lt;/span&gt;
+            &lt;/button&gt;
+            &lt;a class=&quot;navbar-brand&quot; href=&quot;#&quot;&gt;The Brand&lt;/a&gt;
+        &lt;/div&gt;
+        &lt;div class=&quot;collapse navbar-collapse&quot; id=&quot;collapse-45821&quot;&gt;
+            &lt;form action=&quot;/login&quot; class=&quot;navbar-form navbar-left&quot; method=&quot;post&quot;&gt;
+                &lt;div class=&quot;form-group&quot;&gt;
+                    &lt;input class=&quot;form-control&quot; id=&quot;search-term&quot; name=&quot;search_term&quot; placeholder=&quot;Search&quot; type=&quot;text&quot; /&gt;
+                &lt;/div&gt;
+                &lt;button class=&quot;btn btn-default&quot; type=&quot;submit&quot;&gt;Submit&lt;/button&gt;
+            &lt;/form&gt;
+            &lt;a class=&quot;btn btn-default navbar-btn navbar-left&quot; href=&quot;#&quot;&gt;A link&lt;/a&gt;
+            &lt;ul class=&quot;nav navbar-nav&quot;&gt;
+                &lt;li data-stuff=&quot;inli&quot;&gt;&lt;a href=&quot;#&quot; data-item=&quot;1&quot;&gt;Another linkage&lt;/a&gt;&lt;/li&gt;
+            &lt;/ul&gt;
+            &lt;p class=&quot;navbar-right navbar-text&quot;&gt;Hello&lt;/p&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/nav&gt;</pre>
+<div>    <nav class="navbar navbar-inverse">        <div class="container">            <div class="navbar-header">                <button class="collapsed navbar-toggle" data-target="#collapse-45821" data-toggle="collapse" type="button">                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                    <span class="icon-bar"></span>                </button>                <a class="navbar-brand" href="#">The Brand</a>            </div>            <div class="collapse navbar-collapse" id="collapse-45821">                <form action="/login" class="navbar-form navbar-left" method="post">                    <div class="form-group">                        <input class="form-control" id="search-term" name="search_term" placeholder="Search" type="text" />                    </div>                    <button class="btn btn-default" type="submit">Submit</button>                </form>                <a class="btn btn-default navbar-btn navbar-left" href="#">A link</a>                <ul class="nav navbar-nav">                    <li data-stuff="inli"><a href="#" data-item="1">Another linkage</a></li>                </ul>                <p class="navbar-right navbar-text">Hello</p>            </div>        </div>    </nav></div>
 <hr />
 <p>This is (almost) identical to the <a href="http://getbootstrap.com/components/#navbar">Bootstrap documentation example</a>. The differences should be: The <code>form</code> has an action and the <code>input</code> has an <code>id</code> and a <code>name</code>:</p>
 <pre>&lt;%= navbar header =&gt; [&#39;Brand&#39;, [&#39;#&#39;], hamburger, toggler =&gt; &#39;collapse-4124&#39;],
